# 00-binaries-and-interop

./: .gitignore  README.md
0-executables/: 0-0-compile-executable-macOS.sh  0-1-compile-assembly-macOS.sh  0-2-compile-bytecode-macOS.sh  0-3-compile-object-macOS.sh  1-0-compile-executable-linux.sh  2-0-compile-executable-mingw64-msys2.sh  3-0-compile-executable-msvc.bat  helloWorld.c  helloWorld.ll  helloWorld.s
1-libraries/: 0-0-compile-library-it-macOS.sh  0-1-compile-assembly-it-macOS.sh  0-2-compile-no-link-it-macOS.sh  0-3-compile-library-bg-macOS.sh  0-4-compile-assembly-bg-macOS.sh  0-5-compile-no-link-bg-macOS.sh  1-0-compile-library-it-linux.sh  1-1-compile-no-link-it-linux.sh  1-2-compile-library-bg-linux.sh  1-3-compile-no-link-bg-linux.sh  2-0-compile-library-it-msys2.sh  2-1-compile-no-link-it-msys2.sh  2-2-compile-library-bg-msys2.sh  2-3-compile-no-link-bg-msys2.sh  3-0-compile-library-it-msvc.bat  3-1-compile-no-link-it-msvc.bat  3-2-compile-library-bg-msvc.bat  3-3-compile-no-link-bg-msvc.bat  greetings-bg.c  greetings-bg.s  greetings-it.c  greetings-it.s
2-linking/: 0-0-compile-executable-header-errors-macOS.sh  0-1-compile-executable-undefined-symbols-errors-macOS.sh  0-2-compile-executable-it-macOS.sh  0-3-compile-executable-bg-macOS.sh  0-4-compile-static-executable-it-macOS.sh  0-5-compile-static-executable-bg-macOS.sh  0-6-optimize-dynamic-executable-macOS.sh  0-7-optimize-static-executable-macOS.sh  0-8-optimize-static-executable-macOS-gcc.sh  1-0-compile-executable-it-linux.sh  1-1-compile-executable-bg-linux.sh  1-2-compile-static-executable-it-linux.sh  1-3-compile-static-executable-bg-linux.sh  1-3-optimize-dynamic-executable-linux.sh  1-4-optimize-static-executable.sh  2-0-compile-executable-it-mingw64-msys2.sh  2-1-compile-executable-bg-mingw64-msys2.sh  2-2-compile-static-executable-it-mingw64-msys2.sh  3-0-compile-executable-it-msvc.bat  (+14 more)
4-cmake/: CMakeLists.txt  cmake-ninja.bat  cmake-vs-2022.bat
(+43 files in other folders)
